Switched to 'maven-publish'